@@ -1,6 +1,11 @@
 iowow (1.2.15) UNRELEASED; urgency=medium
 
   * `IWKV_PUT_HANDLER` called for insert operations (not only for updates)
+  * Added `IWFS_OUNLINK` flag. Unlink(delete) file on close (iwfile.h)
+  * Added `IWFS_OTMP` flag. Create tmp file (iwfile.h)
+  * Added UUID v4 generation function (iwuuid.h)
+  * Added iwp_tmpdir() (iwp.h)
+  * Added iwp_allocate_tmpfile_path() (iwp.h)
 
  -- Anton Adamansky <adamansky@gmail.com>  Fri, 09 Nov 2018 00:57:42 +0700
 
